style/Migrar iconos a fa-solid

--- a/views/components/publication/video-player.html
+++ b/views/components/publication/video-player.html
@@ -80,10 +80,10 @@
   <div class="interactions-video">
     <div class="actions-video">
       <button class="like-button-video">
-        <i class="far fa-thumbs-up"></i>Me gusta
+        <i class="fa-solid fa-thumbs-up"></i>Me gusta
       </button>
-      <button><i class="far fa-comment"></i>Comentar</button>
-      <button><i class="fas fa-share"></i>Compartir</button>
+      <button><i class="fa-regular fa-comment"></i>Comentar</button>
+      <button><i class="fa-solid fa-share"></i>Compartir</button>
     </div>
     <div class="reactions-video">
       <div>
