--- a/views/components/templates/amigos.html
+++ b/views/components/templates/amigos.html
@@ -74,7 +74,7 @@
         class="item-menu active"
       >
         <div class="icon">
-          <i class="fas fa-home"></i>
+          <i class="fa-solid fa-house"></i>
         </div>
         <span>Inicio</span>
       </a>
@@ -83,7 +83,7 @@
         class="item-menu"
       >
         <div class="icon">
-          <i class="fas fa-user-friends"></i>
+          <i class="fa-solid fa-user-group"></i>
         </div>
         <span>Solicitudes de amistad</span>
       </a>
@@ -92,7 +92,7 @@
         class="item-menu"
       >
         <div class="icon">
-          <i class="fas fa-users"></i>
+          <i class="fa-solid fa-users"></i>
         </div>
         <span>Sugerencias</span>
       </a>
@@ -101,7 +101,7 @@
         class="item-menu"
       >
         <div class="icon">
-          <i class="fas fa-user"></i>
+          <i class="fa-solid fa-user"></i>
         </div>
         <span>Todos los amigos</span>
       </a>
@@ -110,7 +110,7 @@
         class="item-menu"
       >
         <div class="icon">
-          <i class="fas fa-birthday-cake"></i>
+          <i class="fa-solid fa-cake-candles"></i>
         </div>
         <span>Cumpleaños</span>
       </a>
@@ -119,7 +119,7 @@
         class="item-menu"
       >
         <div class="icon">
-          <i class="fas fa-list"></i>
+          <i class="fa-solid fa-list"></i>
         </div>
         <span>Listas personalizadas</span>
       </a>
