--- a/views/components/user-elements/header-video.html
+++ b/views/components/user-elements/header-video.html
@@ -68,7 +68,7 @@
   <a href="#"><button>Videos guardados</button></a>
   <a href="#"><button>Seguidas</button></a>
   <div class="vd-search">
-    <i class="fas fa-search"></i>
+    <i class="fa-solid fa-magnifying-glass"></i>
     <input type="text" placeholder="Buscar videos" />
   </div>
 </div>
