--- a/views/components/user-elements/header.html
+++ b/views/components/user-elements/header.html
@@ -114,14 +114,14 @@
 <div class="container-profile">
   <div class="cover-photo">
     <div class="edit-cover-photo">
-      <i class="fas fa-camera"> </i>
+      <i class="fa-solid fa-camera"> </i>
       Editar foto de portada
     </div>
   </div>
   <div class="profile-info">
     <div class="profile-photo">
       <div class="edit-profile-photo">
-        <i class="fas fa-camera"> </i>
+        <i class="fa-solid fa-camera"></i>
       </div>
     </div>
     <div class="profile-details">
@@ -132,7 +132,7 @@
     <div class="profile-actions">
       <button class="edit-profile">Editar perfil</button>
       <div class="more-options">
-        <i class="fas fa-ellipsis-h"> </i>
+        <i class="fa-solid fa-ellipsis"></i>
       </div>
     </div>
   </div>
