--- a/views/components/user/detalles-expandido.html
+++ b/views/components/user/detalles-expandido.html
@@ -74,22 +74,22 @@
 
   <div class="user-info">
     <div class="info-item">
-      <i class="fas fa-user"></i>
+      <i class="fa-solid fa-user"></i>
       <span class="label">Nombre:</span>
       <span class="value">{{nombre}}</span>
     </div>
     <div class="info-item">
-      <i class="fas fa-user"></i>
+      <i class="fa-solid fa-user"></i>
       <span class="label">Apellido:</span>
       <span class="value">{{apellido}}</span>
     </div>
     <div class="info-item">
-      <i class="fas fa-envelope"></i>
+      <i class="fa-solid fa-envelope"></i>
       <span class="label">Email:</span>
       <span class="value">{{email}}</span>
     </div>
     <div class="info-item">
-      <i class="fas fa-align-left"></i>
+      <i class="fa-solid fa-align-left"></i>
       <span class="label">Descripción:</span>
       <span class="value">{{descripcion}}</span>
     </div>
@@ -97,22 +97,22 @@
 
   <div class="user-extra-info">
     <div class="info-item">
-      <i class="fas fa-calendar-alt"></i>
+      <i class="fa-solid fa-calendar-days"></i>
       <span class="label">Fecha de registro:</span>
       <span class="value">{{fecha_registro}}</span>
     </div>
     <div class="info-item">
-      <i class="fas fa-map-marker-alt"></i>
+      <i class="fa-solid fa-location-dot"></i>
       <span class="label">Ubicación:</span>
       <span class="value">{{ubicacion}}</span>
     </div>
     <div class="info-item">
-      <i class="fas fa-heart"></i>
+      <i class="fa-solid fa-heart"></i>
       <span class="label">Estado Civil:</span>
       <span class="value">{{estado_civil}}</span>
     </div>
     <div class="info-item">
-      <i class="fas fa-graduation-cap"></i>
+      <i class="fa-solid fa-graduation-cap"></i>
       <span class="label">Educación:</span>
       <span class="value">{{educacion}}</span>
     </div>
