--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -1,5 +1,3 @@
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet">
-
 <style>
   .post-container-create {
     background-color: var(--background-primary);
@@ -81,7 +79,7 @@
     padding: 1rem;
     width: 100%;
     max-width: 500px;
-    height: 610px;
+    height: auto;
     position: absolute;
     top: 50%;
     left: 50%;
