--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
   --border-radius-primary: 8px;
   --border-radius-secondary: 10px;
   --border-radius-three: 12px;
+  --border: 1px solid #dddfe2;
 }
 
 ::-webkit-scrollbar {
