style: Migrar a variables CSS para border

--- a/views/components/aside/details.html
+++ b/views/components/aside/details.html
@@ -8,6 +8,8 @@
     background-color: var(--background-primary);
     box-shadow: var(--box-shadow);
     padding: 1rem;
+    border: var(--border);
+
   }
   .information-user h2 {
     font-size: 18px;
