--- a/views/components/aside/fotos.html
+++ b/views/components/aside/fotos.html
@@ -4,6 +4,7 @@
     background-color: white;
     box-shadow: var(--box-shadow);
     padding: 1rem;
+    border: var(--border);
   }
   .container-fotos .header-fotos {
     display: flex;
