--- a/views/components/publication/post.html
+++ b/views/components/publication/post.html
@@ -8,6 +8,7 @@
     border: 1px solid #dddfe2;
     border-radius: 8px;
     box-shadow: var(--box-shadow);
+    border: var(--border);
   }
   .post-header {
     display: flex;
