--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -7,6 +7,7 @@
     max-width: 680px;
     margin: 0 auto;
     margin-bottom: 10px;
+    border: var(--border);
   }
 
   .post-header {
@@ -86,6 +87,7 @@
     transform: translate(-50%, -50%);
     border-radius: 12px;
     box-shadow: var(--box-shadow);
+    border: var(--border);
   }
 
   .create-post-perfil {
