--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
   --border-radius-secondary: 10px;
   --border-radius-three: 12px;
   --border: 1px solid #dddfe2;
+  --border-top-bottom: 1px solid #dddfe2;
 }
 
 ::-webkit-scrollbar {
