style: Agregar variables CSS para border-top-bottom

--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -39,10 +39,11 @@
     color: var(--text-color-secondary);
   }
 
-  .post-actions {
+  .post-actions-a {
     display: flex;
     justify-content: space-around;
     margin-top: 10px;
+    border-top: var(--border-top-bottom);
   }
 
   .post-action {
@@ -242,7 +243,7 @@
       type="text"
     />
   </div>
-  <div class="post-actions">
+  <div class="post-actions-a">
     <div class="post-action">
       <i
         class="fas fa-video"
