--- a/views/components/publication/post.html
+++ b/views/components/publication/post.html
@@ -61,7 +61,7 @@
   }
   .post-reactions {
     padding: 10px 15px;
-    border-top: 1px solid #dddfe2;
+    border-top: var(--border-top-bottom);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -77,8 +77,8 @@
     display: flex;
     justify-content: space-around;
     padding: 10px 0;
-    border-top: 1px solid #dddfe2;
-    border-bottom: 1px solid #dddfe2;
+    border-top: var(--border-top-bottom);
+    border-bottom: var(--border-top-bottom);
   }
   .post-actions button {
     background: none;
