style: Corregir variables CSS para color

--- a/views/components/aside/details.html
+++ b/views/components/aside/details.html
@@ -20,10 +20,10 @@
     margin-bottom: 20px;
   }
   .button {
-    background-color: var(--button-secondary);
+    background-color: var(--background-input);
     border: none;
     border-radius: 6px;
-    color: var(--text-color);
+    color: var(--background-text);
     display: flex;
     align-items: center;
     justify-content: center;
