--- a/views/components/publication/contenedor-comentario.html
+++ b/views/components/publication/contenedor-comentario.html
@@ -37,6 +37,9 @@
     align-items: center;
     justify-content: center;
   }
+  .content-send-comentario input::placeholder {
+    color: var(--background-text);
+  }
 </style>
 <div
   class="container-comentarios"
