--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -29,6 +29,7 @@
     border-radius: 20px;
     padding: 10px 15px;
     width: 100%;
+    color: var(--background-text);
   }
 
   .post-input:hover {
@@ -167,7 +168,7 @@
     width: 100%;
     display: flex;
     font-size: 14px;
-    background-color: var(--background-text);
+    background-color: var(--background-input);
     color: #f02849;
     flex-direction: column;
     border-radius: 8px;
