--- a/views/components/aside/fotos.html
+++ b/views/components/aside/fotos.html
@@ -23,6 +23,10 @@
     object-fit: cover;
     border-radius: 12px;
   }
+  .header-fotos a {
+    text-decoration: none;
+    color: var(--text-color);
+  }
 </style>
 
 <div class="container-fotos">
