style: Corregir variables CSS para color en input-post.html

--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -15,6 +15,9 @@
     align-items: center;
     margin-bottom: 10px;
   }
+  .post-header .post-input::placeholder{
+    color: var(--background-text);
+  }
 
   .profile-pic {
     width: 40px;
@@ -29,7 +32,6 @@
     border-radius: 20px;
     padding: 10px 15px;
     width: 100%;
-    color: var(--background-text);
   }
 
   .post-input:hover {
@@ -218,7 +220,7 @@
   }
 
   .file-content {
-    border: 2px solid #ddd;
+    border: var(--border-top-bottom);
     border-radius: 2px;
     width: 100%;
   }
