style: Agregar hover para contenedor-comentario.html

--- a/views/components/publication/contenedor-comentario.html
+++ b/views/components/publication/contenedor-comentario.html
@@ -40,6 +40,9 @@
   .content-send-comentario input::placeholder {
     color: var(--background-text);
   }
+  .content-send-comentario input:hover {
+    background-color: var(--background-input-hover);
+  }
 </style>
 <div
   class="container-comentarios"
