style: Corregir ancho de botones en `input-post.html`

--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -157,7 +157,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 8px;
-    padding: 8px;
+    padding: 8px 0;
   }
 
   .agregar-foto-video .upload-file {
@@ -167,7 +167,6 @@
   }
 
   .agregar-foto-video .upload-file i {
-    width: 100%;
     display: flex;
     font-size: 14px;
     background-color: var(--background-input);
