style: Añadir tamaño de contenedor según la clase de targeta de usuario

--- a/views/components/templates/user.html
+++ b/views/components/templates/user.html
@@ -16,6 +16,9 @@
     position: sticky;
     top: calc(50px + 1rem);
   }
+  .content-aside:has(.user-details-card) {
+    width: 241%;
+  }
   .user-container .content-user {
     width: 58%;
   }
