refactor: Definir rutas en de header

--- a/views/layouts/header.html
+++ b/views/layouts/header.html
@@ -48,9 +48,8 @@
   </a>
   <div class="icons">
     <a href="/"><i class="fas fa-home"></i></a>
-    <a href="#"><i class="fas fa-tv"></i></a>
-    <a href="#"><i class="fas fa-users"></i></a>
-    <a href="#"><i class="fas fa-bell"></i></a>
-    <a href="#"><i class="fas fa-user-circle"></i></a>
+    <a href="/videos"><i class="fas fa-tv"></i></a>
+    <a href="/amigos"><i class="fas fa-bell"></i></a>
+    <a href="/logout"><i class="fas fa-user-circle"></i></a>
   </div>
 </div>
